--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "components": "^0.1.0",
     "firebase": "^9.9.0",
     "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.33.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled": "^1.0.0",
+    "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.19",
     "web-vitals": "^2.1.4"
   },
