--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "5.0.1",
     "styled": "^1.0.0",
     "styled-components": "^5.3.5",
-    "sweetalert2": "^11.4.19",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
