--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "styled-components": "^5.3.5",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.4.24",
+    "sweetalert2-react-content": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
